inital nmap upload support
